# autonomous-ai-workflow-orchestrator

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  sample_workflow.json
docs/: adr-001-workflow-run-service.md
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/workflow_orchestrator/: __init__.py  agents.py  api.py  cli.py  config.py  executor.py  schemas.py  service.py  storage.py
tests/: test_api.py  test_executor.py  test_service.py
